--- a/InAppNotificationBuilder/InAppNotificationBuilder.csproj
+++ b/InAppNotificationBuilder/InAppNotificationBuilder.csproj
@@ -170,6 +170,9 @@
       <HintPath>..\packages\jacobslusser.ScintillaNET.3.6.3\lib\net40\ScintillaNET.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Svg, Version=2.4.3.29446, Culture=neutral, PublicKeyToken=12a0bac221edeae2, processorArchitecture=MSIL">
+      <HintPath>..\packages\Svg.2.4.3\lib\Svg.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -289,6 +292,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\ImageListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ImageListForm.Designer.cs">
+      <DependentUpon>ImageListForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\InsertLinkForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -364,6 +373,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Forms\ImageListForm.resx">
+      <DependentUpon>ImageListForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\InsertLinkForm.resx">
       <DependentUpon>InsertLinkForm.cs</DependentUpon>
     </EmbeddedResource>
