--- a/InAppNotificationBuilder/packages.config
+++ b/InAppNotificationBuilder/packages.config
@@ -28,6 +28,7 @@
   <package id="NuGet.Repositories" version="4.2.0" targetFramework="net462" />
   <package id="NuGet.RuntimeModel" version="4.2.0" targetFramework="net462" />
   <package id="NuGet.Versioning" version="5.9.1" targetFramework="net462" requireReinstallation="true" />
+  <package id="Svg" version="2.4.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
